Cambio en listado

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <li>RUBY ON RAILS</li>
             <li>CONTROL DE VERSIONES CON GIT</li>
             <li>ECMAScript</li>
-            <li>ANGULAR 2+</li>
+            <li>ANGULAR </li>
             <li>GESTIÓN DE PROYECTOS</li>
           </ul>
           
